[project]
name = "llm_bench"
version = "1.0.0"
description = "Benchmark tool for LLM pipelines with OpenVINO"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "../../LICENSE" }
authors = [
    { name = "OpenVINO Developers", email = "openvino@intel.com" },
]
dependencies = [
    "openvino-genai",
    "numpy",
    "pillow",
    "torch",
    "transformers[sentencepiece]>=4.40.0",
    "diffusers>=0.22.0",
    "optimum-intel[nncf]>=1.25.0",
    "packaging",
    "psutil",
    "timm",
    "tiktoken",
    "librosa",
    "matplotlib",
    "jinja2>=3.1.0",
    "scipy",
    "gguf-parser",
    "gguf>=0.10",
    "accelerate>=0.26.0",
    "sentence-transformers>=2.2.2",
    "pandas>=2.0.3",
    "tqdm>=4.66.1",
    "datasets>=3.6.0",
    "sentencepiece",
    "num2words",
]


[project.optional-dependencies]
conversion = [
    "einops",
    "transformers-stream-generator",
    "backoff",
    "bitsandbytes",
]
gptq = [
    "auto-gptq>=0.5.1; sys_platform == 'linux'",
    "autoawq<0.2.8; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling", "hatch-cython"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["llm_bench"]


[tool.hatch.build.hooks.cython]
compile-args = ["-fpermissive"]

[[tool.uv.index]]
name = "openvino-nightly"
url = "https://storage.openvinotoolkit.org/simple/wheels/nightly"
explicit = true