[project]
name = "whowhatbench"
version = "1.0.0"
description = "Short test for LLMs"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "../../LICENSE" }
authors = [
    { name = "Intel", email = "andrey.anufriev@intel.com" },
]
dependencies = [
    "openvino-genai",
    "torch",
    "accelerate>=0.26.0",
    "transformers>=4.35.2",
    "sentence-transformers>=2.2.2",
    "optimum-intel[nncf]>=1.19.0",
    "pandas>=2.0.3",
    "numpy>=1.23.5",
    "tqdm>=4.66.1",
    "diffusers",
    "datasets>=3.6.0",
    "sentencepiece",
    "jinja2>=3.1.0",
    "scipy",
]

[project.optional-dependencies]
gptq = [
    "auto-gptq; sys_platform == 'linux'",
    "autoawq<0.2.8; sys_platform == 'linux'",
]

[project.scripts]
wwb = "whowhatbench.wwb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["whowhatbench/prompts/*.yaml"]
